# news

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.no_venv  Pipfile  README.md  conftest.py  db.sqlite3  docker-compose-prod_template.yml  docker-compose.yml  env  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run  setup.cfg
.github/workflows/: nox-audit_multi-arch.yml  nox-coverage.yml  nox-lint_multi-arch.yml  nox-safety_multi-arch.yml
accounts/: admin.py  forms.py  models.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_bio_customuser_country_customuser_name_and_more.py
accounts/tests/: test_signup_page.py
articles/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  tests.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_alter_article_status.py  0002_comment.py  0003_alter_comment_article.py  0003_alter_comment_options_remove_comment_author_and_more.py  0004_article_tags.py  0004_comment_date.py
articles/templatetags/: article_tags.py
articles/tests/: factories.py  test_forms.py  test_models.py  test_urls.py  test_views.py
config/: settings.py  urls.py
docs/: changelog.rst  conf.py  contributing.rst  create_new_articles.rst  create_new_users.rst  features.rst  index.rst  installing.rst  package_index.rst  testing.rst
htmlcov/: class_index.html  coverage.json  d_1ea838694151cac8_test_py.html  d_1ea838694151cac8_urls_py.html  d_509fd8af0f7a1b49_admin_py.html  d_509fd8af0f7a1b49_apps_py.html  d_509fd8af0f7a1b49_forms_py.html  d_509fd8af0f7a1b49_models_py.html  d_509fd8af0f7a1b49_urls_py.html  d_509fd8af0f7a1b49_views_py.html  d_93ba7ac503610b20_admin_py.html  d_93ba7ac503610b20_apps_py.html  d_93ba7ac503610b20_feeds_py.html  d_93ba7ac503610b20_forms_py.html  d_93ba7ac503610b20_models_py.html  d_93ba7ac503610b20_sitemaps_py.html  d_93ba7ac503610b20_urls_py.html  d_93ba7ac503610b20_views_py.html  d_9df13ddeb1e47e46_admin_py.html  d_9df13ddeb1e47e46_apps_py.html  d_9df13ddeb1e47e46_forms_py.html  d_9df13ddeb1e47e46_models_py.html  d_9df13ddeb1e47e46_urls_py.html  d_9df13ddeb1e47e46_views_py.html  d_a1040c8fed9314bb_article_tags_py.html  d_b88c3b5a8ce6a61b_test_forms_py.html  d_b88c3b5a8ce6a61b_test_views_py.html  d_d1909ae9c458e289_test_forms_py.html  d_d1909ae9c458e289_test_models_py.html  d_d1909ae9c458e289_test_urls_py.html  d_d1909ae9c458e289_test_views_py.html  d_dfdacaa496597cde_test_forms_py.html  d_dfdacaa496597cde_test_models_py.html  d_dfdacaa496597cde_test_urls_py.html  d_dfdacaa496597cde_test_views_py.html  function_index.html  index.html  status.json  z_1ea838694151cac8_test_py.html  z_1ea838694151cac8_urls_py.html  (+31 more)
pages/: tests.py
pages/tests/: test_forms.py  test_views.py
static/css/: base.css
staticfiles/: staticfiles.json
staticfiles/css/: base.8d5ae5d1bd83.css  base.965c650be3f3.css  base.css
templates/: about.html  article_detail.html  article_edit.html  article_list.html  article_new.html  base.html  comment_new.html  home.html  pagination.html
templates/account/: email.html  email_confirm.html  login.html  logout.html  password_change.html  password_change_done.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  signup.html  user_detail.html
templates/admin/: base_site.html
templates/articles/: article_delete.html  article_detail.html  article_edit.html  article_list.html  article_new.html  article_share.html  latest_articles.html  search.html
templates/articles/includes/: comment_form.html
templates/comments/: comment_add.html  comment_delete.html  comment_detail.html  comment_edit.html  comment_list.html  comment_new.html
templates/pages/: about.html  contact.html  home.html
templates/registration/: login.html  password_change_form.html  password_reset_form.html  signup.html
templates/socialaccount/: authentication_error.html
