[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
  | ^.*\b(migrations)\b.*$
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["*.gitignore"]
extend_skip = ["*.md", "*.json"]
line_length = 119

[tool.poetry]
name = "news"
version = "0.1.0"
description = "A simple new app built with Django"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-crispy-forms = "^1.14.0"
django-allauth = "^0.50.0"
environs = {extras = ["django"], version = "^9.5.0"}
django-bootstrap4 = "^22.1"
whitenoise = "^6.1.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.4.0"
pre-commit = "^2.19.0"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
