[metadata]
name = news
version = 0.1.0
url = https://github.com/kevinbowen777/news
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
description = A news app demonstrating basic Django functionality
long_description = file: README.md
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
project_urls =
    Source = https://github.com/kevinbowen777/news/

[options]
python_requires = >=3.9
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django >= 4.0.7

[flake8]
# https://flake8.pycqa.org/en/latest/user/configuration.html
exclude =
    conftest.py
    # No need to traverse git directory
    .git,
    # Skip cache directories
    __pycache__,
    build,
    .env,
    accounts/migrations/*,
    articles/migrations/*,
    pages/migrations/*,
    dist,
    images/
# https://www.flake8rules.com
ignore =
    # slice notation whitespace
    E203
    # import at top, avoid circular imports
    E402
    # bare except
    E722
max-line-length = 79
per-file-ignores =
    # __init__ exports names
    # app/crud/__init__.py: F401
    # app/schemas/__init__.py: F401
    # app/tests/conftest.py: E501
